@@ -42,8 +42,4 @@ final class tx_oelib_dummyObjectToCheck extends tx_oelib_templatehelper {
 		$this->init($configuration);
 	}
 }
-
-if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/tests/fixtures/class.tx_oelib_dummyObjectToCheck.php']) {
-	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/tests/fixtures/class.tx_oelib_dummyObjectToCheck.php']);
-}
 ?>
