@@ -60,8 +60,4 @@ final class tx_oelib_tests_fixtures_TestingModel extends tx_oelib_Model {
 		parent::setUid($uid);
 	}
 }
-
-if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/tests/fixtures/class.tx_oelib_tests_fixtures_TestingModel.php']) {
-	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/tests/fixtures/class.tx_oelib_tests_fixtures_TestingModel.php']);
-}
 ?>
